[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/CSS/CharacterSelect.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/CSS/CharacterButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/swordandgun/SwordGuy.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/CSS/CharacterDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/wizard/Wizard.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/ButtonSoundPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://characters/robo/Robot.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/GameSettingsPanelContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://characters/paladin/paladin.tscn" type="PackedScene" id=10]

[node name="CharacterSelect" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ShowSettingsButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.5
margin_top = 29.0
margin_right = 35.5
margin_bottom = 41.0
toggle_mode = true
action_mode = 0
text = "show settings"

[node name="GameSettingsPanelContainer" parent="." instance=ExtResource( 9 )]
margin_bottom = -25.0

[node name="CharacterButtonContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = 10.0
margin_right = 194.0
margin_bottom = 70.0
alignment = 1

[node name="NinjaGuy" parent="CharacterButtonContainer" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 132.0
text = "ninja"
icon_align = 1
expand_icon = true

[node name="SwordGuy" parent="CharacterButtonContainer" instance=ExtResource( 3 )]
margin_left = 133.0
margin_right = 193.0
text = "cowboy"
character_scene = ExtResource( 4 )

[node name="Wizard" parent="CharacterButtonContainer" instance=ExtResource( 3 )]
margin_left = 194.0
margin_right = 254.0
text = "wizard"
character_scene = ExtResource( 6 )

[node name="Paladin" parent="CharacterButtonContainer" instance=ExtResource( 3 )]
margin_left = 255.0
margin_right = 315.0
text = "Paladin"
character_scene = ExtResource( 10 )

[node name="Robot" parent="CharacterButtonContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 255.0
margin_right = 315.0
text = "robot"
character_scene = ExtResource( 8 )

[node name="GoButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 90.0
margin_right = 40.0
margin_bottom = 118.0
disabled = true
text = "GO"

[node name="SelectingLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -292.0
margin_top = 168.0
margin_right = 292.0
margin_bottom = 179.0
text = "P1 SELECTING"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="P1Display" parent="HBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_right = 212.0
margin_bottom = 360.0
mouse_filter = 2

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 213.0
margin_right = 426.0
margin_bottom = 360.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="P2Display" parent="HBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 427.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
player_id = 2

[node name="QuitButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 292.0
margin_top = -20.0
margin_right = -292.0
margin_bottom = -8.0
text = "quit"

[node name="ButtonSoundPlayer" parent="." instance=ExtResource( 7 )]
button_containers = [ NodePath("../CharacterButtonContainer") ]
